--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
                 <div class="profile-avatar-section">
                     <img src="https://img-uk1.cd5.uk/originals/597/stockimages/404079/bc150586f9c9473d1734a79338cac233_404079.jpg" alt="Profile" class="profile-avatar">
                     <div class="profile-info">
-                        <h1>Rish</h1>
+                        <h1>Sajid</h1>
                         <p class="username">@liar_m3</p>
                         <p class="location">📍 New York City, NY</p>
                     </div>
